Fantom-Factory branding on TopNavBar

--- a/etc/less/website.less
+++ b/etc/less/website.less
@@ -16,6 +16,7 @@
 @import "components/anchorJs.less";
 @import "components/fatFooter.less";
 @import "components/jasny-bootstrap.less";
+@import "components/layout.less";
 @import "components/topNavBar.less";
 
 @import "pages/error404Page.less";
