--- a/etc/web-pages/Error404.html.slim
+++ b/etc/web-pages/Error404.html.slim
@@ -10,9 +10,9 @@
 					div.glow
 					div.hive
 					div.hole
-						img.img-responsive (src="/images/theHole.png" alt="A tear in the Fantomverse")
+						img.img-responsive (src="${assetUrl(`/images/theHole.png`)}" alt="A tear in the Fantomverse")
 					div.fantomFactory
-						img (src="/images/fantomFactory.png" alt="Fantom-Factory")
+						img (src="${assetUrl(`/images/fantomFactory.png`)}" alt="Fantom-Factory")
 
 			h1.podHeading
 				span	404
