--- a/etc/web-components/TopNavBarPublic.slim
+++ b/etc/web-components/TopNavBarPublic.slim
@@ -1,5 +1,12 @@
 
-header.navbar.navbar-default.navbar-fixed-top
+header.navbar.navbar-default.navbar-fixed-top.navbar-inverse
+
+	div.hive-background
+		div.hive-glow
+			div.hive-spark.go
+			div.hive-spark
+		div.hive-hex
+
 	nav.container
 		div.navbar-header
 			button.navbar-toggle.collapsed (type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
@@ -8,7 +15,8 @@ header.navbar.navbar-default.navbar-fixed-top
 				span.icon-bar
 				span.icon-bar
 			a.navbar-brand (href="${pageUrl(IndexPage#)}")
-				-- app.renderFannyTheFantom		
+				span.fannyTheFantom
+				//-- app.renderFannyTheFantom
 				span.name Pod Repo
 
 		div#navbar.navbar-collapse.collapse
