--- a/etc/web-components/PodList.slim
+++ b/etc/web-components/PodList.slim
@@ -30,5 +30,5 @@ div.podList
 				span (style="display: inline-block")
 					== podDocsHtml(pod)
 					-- if (pod.meta.jsEnabled)
-						span.pull-right.jsIcon (title="Pod available in Javascript")
+						span.pull-right.jsIcon (title="Pod is Javascript Compatible")
 			hr				
