--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -17,7 +17,7 @@ header.navbar.navbar-default.navbar-fixed-top.navbar-inverse
 			a.navbar-brand (href="${pageUrl(IndexPage#)}")
 				span.fannyTheFantom
 				//-- app.renderFannyTheFantom		
-				span.name Pod Repo
+				span.name Eggbox
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
