--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -21,7 +21,7 @@ header.navbar.navbar-default.navbar-fixed-top.navbar-inverse
 
 		div#navbar.navbar-collapse.collapse
 			ul.nav.navbar-nav
-				== pageLink(PodsIndexPage#,	"All Pods")
+				== pageLink(PodsIndexPage#,	"Search")
 				== pageLink(MyPodsPage#,	"My Pods")
 
 			ul.nav.navbar-nav.navbar-right
