--- a/etc/web-components/DocTypeRefTemplate.slim
+++ b/etc/web-components/DocTypeRefTemplate.slim
@@ -2,7 +2,7 @@
 -- if (ref.isParameterized)
 
 	-- if (ref.qname == "sys::List")
-		-- app.renderDocTypeRefTemplate(ctx, ref.v, false)
+		== app.renderDocTypeRefTemplate(ctx, ref.v, false)
 		== "[]"
 
 	-- else if (ref.qname == "sys::Map")
