--- a/etc/web-pages/Error404.html.slim
+++ b/etc/web-pages/Error404.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(false, "404 Not Found")
+== app.renderLayout(false, "404 Not Found")
 
 	ol.breadcrumb
 		li.active	404 Not Found
