--- a/etc/web-pages/Users.html.slim
+++ b/etc/web-pages/Users.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "${user.screenName} :: User")
+== app.renderLayout(true, "${user.screenName} :: User")
 
 	ol.breadcrumb
 		li.active	Users
