--- a/etc/web-pages/help/HelpFanr.html.slim
+++ b/etc/web-pages/help/HelpFanr.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "Using fanr :: Help")
+== app.renderLayout(true, "Using fanr :: Help")
 
 	ol.breadcrumb
 		li.active	Get Started
