--- a/etc/web-components/TopNavBarPrivate.slim
+++ b/etc/web-components/TopNavBarPrivate.slim
@@ -16,7 +16,7 @@ header.navbar.navbar-default.navbar-fixed-top.navbar-inverse
 				span.icon-bar
 			a.navbar-brand (href="${pageUrl(IndexPage#)}")
 				span.fannyTheFantom
-				//-- app.renderFannyTheFantom		
+				//== app.renderFannyTheFantom		
 				span.name Eggbox
 
 		div#navbar.navbar-collapse.collapse
