--- a/etc/web-pages/Login.html.slim
+++ b/etc/web-pages/Login.html.slim
@@ -1,4 +1,4 @@
--- app.renderLayout(true, "Login")
+== app.renderLayout(true, "Login")
 
 	div.row
 		div.col-sm-offset-1.col-md-offset-2.col-sm-10.col-md-8
