--- a/etc/web-components/FatFooter.slim
+++ b/etc/web-components/FatFooter.slim
@@ -19,7 +19,7 @@ footer#fatFooter.clearfix.hidden-print
 					a.shieldsio (href="http://eggbox.fantomfactory.org/pods/afBedSheet/" title="BedSheet :: Fantom Web Application Server")
 						| <svg height="20" width="142" xmlns="http://www.w3.org/2000/svg"><linearGradient y2="100%" x2="0" id="shield-d"><stop stop-opacity=".1" stop-color="#bbb" offset="0"></stop><stop stop-opacity=".1" offset="1"></stop></linearGradient><mask id="shield-c"><rect fill="#fff" rx="3" height="20" width="142"></rect></mask><g mask="url(#shield-c)"><path d="M0 0h77v20H0z" fill="#555"></path><path d="M77 0h65v20H77z" fill="#97CA00"></path><path d="M0 0h142v20H0z" fill="url(#shield-d)"></path></g><g font-size="11" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" text-anchor="middle" fill="#fff"><text fill-opacity=".3" fill="#010101" y="15" x="38.5">powered by</text><text y="14" x="38.5">powered by</text><text fill-opacity=".3" fill="#010101" y="15" x="108.5">BedSheet</text><text y="14" x="108.5">BedSheet</text></g></svg> 
 					br
-					a.small (href="http://eggbox.fantomfactory.org/pods/afEggbox/")	${FatFooter#.pod.meta["proj.name"]} v${FatFooter#.pod.version}
+					a.small (href="http://eggbox.fantomfactory.org/pods/afEggbox/")	Eggbox v${FatFooter#.pod.version}
 					// - © ${Date.today.year} Alien-Factory
 
 			p	&nbsp;
