fantom.org -> fantom-lang.org

--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -3,7 +3,7 @@
 	h1.page-header.text-center	Fantom Pod Repository		
 
 	div.h1.text-center
-		p.small Libraries for the <a href="http://fantom.org">Fantom</a> Language are called <i>pods</i>. 
+		p.small Libraries for the <a href="http://fantom-lang.org">Fantom</a> Language are called <i>pods</i>. 
 		p.small This is a <i>repository</i> of pods.
 		
 
