Updated to latest pods

--- a/etc/web-pages/Index.html.slim
+++ b/etc/web-pages/Index.html.slim
@@ -47,7 +47,7 @@
 			h2.text-center	Download Pods
 			ul.text-center.list-unstyled
 				li	<b>Download</b> manually
-				li	<b>Install</b> with <a href="http://eggbox.fantomfactory.org/pods/afFpm/">FPM</a> or <a href="http://fantom.org/doc/docFanr/Tool">fanr</a>
+				li	<b>Install</b> with <a href="http://eggbox.fantomfactory.org/pods/afFpm">FPM</a> or <a href="http://fantom.org/doc/docFanr/Tool">fanr</a>
 				
 		p	&nbsp;
 
