--- a/etc/less/fonts/fonticons.less
+++ b/etc/less/fonts/fonticons.less
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fonticons';
-  src: url('../../jlrVbw==/fonts/fonticons.eot');
-  src: url('../../jlrVbw==/fonts/fonticons.eot#iefix') format('embedded-opentype'),
-       url('../../4DnI0Q==/fonts/fonticons.woff') format('woff'),
-       url('../../9AjCww==/fonts/fonticons.ttf') format('truetype'),
-       url('../../YTHnEQ==/fonts/fonticons.svg#fonticons') format('svg');
+  src: url('../../jlrVbw/fonts/fonticons.eot');
+  src: url('../../jlrVbw/fonts/fonticons.eot#iefix') format('embedded-opentype'),
+       url('../../4DnI0Q/fonts/fonticons.woff') format('woff'),
+       url('../../9AjCww/fonts/fonticons.ttf') format('truetype'),
+       url('../../YTHnEQ/fonts/fonticons.svg#fonticons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
